@@ -41,7 +41,10 @@
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s2600jf-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-and-event-code-tables-oem-intel-s2600wp-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s5500wb-spec.h,
-	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-s5500wb-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-quanta-qssc-s4r-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s2600jf-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-sensor-number-oem-intel-s2600wp-spec.h,
+	libfreeipmi/include/freeipmi/spec/oem/ipmi-slave-address-oem-intel-windmill-spec.h,
 	libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-intel-s5500wb-spec.c,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-common-spec.h,
 	libfreeipmi/include/freeipmi/spec/oem/ipmi-cmd-oem-intel-s5500wb-spec.h,
